@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.32 2006/05/04 22:08:05 dillo Exp $
+# $NetBSD: Makefile,v 1.33 2006/06/07 13:52:39 abs Exp $
 
-DISTNAME=	pkg_chk-1.72
+DISTNAME=	pkg_chk-1.73
 CATEGORIES=	pkgtools
 MASTER_SITES=	# empty
 DISTFILES=	# empty
